<resources>
    <string name="app_name">MobileApp - LifeAid</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In.</string>
    <string name="proceed">Proceed</string>
    <string name="phone_number">Phone Number</string>
    <string name="age">Age</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string-array name="roles">
        <item>Aid - Seeker</item>
        <item>Aid - Provider</item>
        <item>Admin</item>
    </string-array>
    <!-- 3/28/2023 -->
    <string-array name="LifeAidUsers">
        <item>Aid-Seeker</item>
        <item>Aid-Provider</item>
        <item>Nurses</item>
        <item>Policemen</item>
        <item>Firemen</item>
        <item>Doctors</item>
    </string-array>
    <!-- 3/28/2023 -->

    <!-- 5/1/2023 -->
    <string-array name="LeaderBoardFilter">
        <item>Ratings</item>
        <item>Commends</item>
        <item>Provisions</item>
    </string-array>
    <!-- 5/1/2023 -->

    <string name="title_activity_maps_aid_provider">MapsActivityAidProvider</string>
    <string name="title_activity_aid_seeker_map_crisis">AidSeekerMapCrisis</string>
    <string name="title_activity_maps_notification_of_admins">MapsActivityNotificationOfAdmins
    </string>
</resources>