<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationDashboard">

    <androidx.cardview.widget.CardView

        android:id="@+id/cardview_register"
        android:layout_width="380dp"
        android:layout_height="680dp"


        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView

            android:id="@+id/cv_design"
            android:layout_width="30dp"
            android:layout_height="680dp"
            app:cardBackgroundColor="#9999ff" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_signup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/already_have_an_account"

                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.149"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.996" />

            <TextView
                android:id="@+id/txt_signinfromreg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/sign_in"
                android:textColor="#8383fc"

                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.996" />

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="255dp"
                android:layout_height="57dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_text_radius"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"


                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.325"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.104" />

            <EditText
                android:id="@+id/et_occu"
                android:layout_width="255dp"
                android:layout_height="57dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_text_radius"
                android:ems="10"
                android:hint="Occupation"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"


                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.32"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.802" />

            <EditText
                android:id="@+id/et_lname"
                android:layout_width="255dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_text_radius"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"


                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.316"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.22" />

            <EditText
                android:id="@+id/et_age"
                android:layout_width="255dp"
                android:layout_height="55dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_text_radius"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"


                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.316"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.332" />

            <EditText
                android:id="@+id/et_pn"
                android:layout_width="255dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_radius"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="textPersonName"


                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.44" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="255dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_radius"
                android:ems="10"
                android:hint="Address"
                android:inputType="textPersonName"


                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.559" />

            <EditText
                android:id="@+id/et_gender"
                android:layout_width="255dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="7dp"
                android:background="@drawable/edit_text_radius"
                android:ems="10"
                android:hint="Gender"
                android:inputType="textPersonName"


                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.68" />

            <TextView
                android:id="@+id/tv_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="R E G I S T R A T I O N"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.009" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="72dp"
                android:layout_height="65dp"
                android:layout_marginTop="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.967"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.082"
                app:srcCompat="@drawable/fnamelname" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="72dp"
                android:layout_height="65dp"
                android:layout_marginTop="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.967"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.203"
                app:srcCompat="@drawable/fnamelname" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="72dp"
                android:layout_height="65dp"
                android:layout_marginTop="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.967"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32"
                app:srcCompat="@drawable/age" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="72dp"
                android:layout_height="65dp"
                android:layout_marginTop="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.967"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442"
                app:srcCompat="@drawable/smartphone" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="72dp"
                android:layout_height="65dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.967"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.567"
                app:srcCompat="@drawable/home" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="72dp"
                android:layout_height="65dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.967"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.694"
                app:srcCompat="@drawable/gender" />

            <ImageView
                android:id="@+id/imageView42"
                android:layout_width="72dp"
                android:layout_height="65dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.967"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.811"
                app:srcCompat="@drawable/occupation" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="224dp"
                android:layout_height="49dp"

                android:background="@drawable/my_button"
                android:text="Register"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.928" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.548"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.435" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>